search result spacing fix

--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -253,7 +253,7 @@ body.modders.index {
     }
 
     .modder-info {
-      margin-top: 32px;
+      margin-top: 64px;
 
       > .photos {
         position: relative;
